--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@klimenty/count-down",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Very simple yet useful count down timer that allows you to create and display it on your web-page.",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,7 @@
     "display-time"
   ],
   "author": "klimenty",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/TheAlmightyMight/CountDownNPM/issues"
   },
